fix(location): filter map locations by video_count > 0 (#17)
Changed findWithinBoundingBox to use JOIN instead of LEFT JOIN and
filter by videoCount > 0, matching the existing cluster query behavior.
Locations without approved videos are no longer shown on the map.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>